# CS2HUDMafia

./: Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  server.py
app/: __init__.py  config.py  logging.py  logging_filters.py  main.py  scheduler.py
app/admin/: __init__.py  match_page.py  players.py  teams.py  videoplayer.py
app/api/: constants.py  gsi.py  players.py  teams.py  utils.py
app/database/: __init__.py  base.py  players.py  teams.py
app/huds_app/: __init__.py  hud.py
app/models/: players.py  teams.py
app/utils/: __init__.py  fake_loop.py  gsi.py  steam_utils.py
app/utils/video_example_creation/: analise_dump.py  gsidump_builder.py
assets/css/: select2_height.css
assets/js/: custom_render.js  match_page.js  match_page_select2.js  utils.js
assets/js/huds/: main.js
assets/templates/: match_page.html  match_page_BON.html  match_page_refresh.html  match_page_sides.html  match_page_teams.html  nicknames.html  steam_id.html  team.html  test.html  videoplayer.html
huds/JohnTimmermann/: index.js  template.pug
