[project]
name = "cs2hudmafia"
version = "0.1.0"
description = "HUD for cs2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "apscheduler>=3.11.1",
    "av>=16.0.1",
    "fastapi>=0.121.0",
    "fasteners>=0.20",
    "httpx>=0.28.1",
    "msgspec>=0.19.0",
    "pillow>=12.0.0",
    "pydantic-settings>=2.11.0",
    "pypugjs>=6.0.1",
    "python-socketio>=5.14.3",
    "sqlalchemy>=2.0.36",
    "sqlalchemy-file>=0.6.0",
    "starlette-admin>=0.15.1",
    "uvicorn>=0.38.0",
]

[tool.ruff]
exclude = ["storage/*", "assets/*"]
fix = true
line-length = 120
